fix: our service title can it be more aligned in the middle

--- a/src/components/OurServices.css
+++ b/src/components/OurServices.css
@@ -43,6 +43,7 @@
   align-items: center; /* vertical centering */
   text-align: center;
   background-color: rgb(255, 255, 255);
+  margin-top: -115px;
 }
 .services-title h1 {
   font-size: 2.8rem;
